Updated 2 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -154,7 +154,7 @@
           SNAP-EBT &amp; Market Bucks
         </h1>
         <p class="ebt-text editable" data-cms-index="1" data-cms-source="/ebt-guidelines.html">
-          <em><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; The EBT booth will be open Friday - Sunday from 8 a.m. - 1 p.m. for the season.</strong></em><strong>&nbsp;</strong><br>
+          <em><strong>The EBT booth will be open Friday - Sunday from 8 a.m. - 1 p.m. for the season.</strong></em><strong>&nbsp;</strong><br>
         </p>
         <h2 class="ebt-text editable" data-cms-index="2" data-cms-source="/ebt-guidelines.html">
           Here is how it works!
