Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
     <div class="col-12 col-lg-12 home-market-info editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>----------------------------</p>
+      <p><strong>Open Memorial Day</strong>&nbsp;</p>
+      <p>6 am to 1 pm</p>
+      <p>----------------------------</p>
       <p><strong>Summer Season Hours&nbsp;</strong></p>
       <p>May 1 - October 31</p>
       <p>------------------------------</p>
