Updated 3 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
   </div>
   <div class="col-12 col-lg-4 about-md-txt-col">
     <p class="about-middle-text editable" data-cms-index="1" data-cms-source="/_includes/about-middle.html">
-      As the largest farmer-managed market in the state, we serve as a community resource, a meeting place, a tourist draw, and most importantly, a place to access Minnesota’s greatest selection of fresh produce, plants, and locally made products.
+      As the largest farmer-managed market in the state, we serve as a community resource, a meeting place, a tourist draw, and most importantly, a place to access Minnesota's greatest selection of fresh produce, plants, and locally made products.
     </p>
     <p class="about-middle-text editable" data-cms-index="2" data-cms-source="/_includes/about-middle.html">
       Our roots in Minneapolis started in 1876 at the corner of First Street and Hennepin Avenue. In 1937, our current flagship market opened at Lyndale and Glenwood Avenue north, marked by the three signature red sheds that still cover our market.
