--- a/index.html
+++ b/index.html
@@ -186,18 +186,19 @@
   </div>
   <div class="market-info-wrapper">
     <div class="col-12 col-lg-12 home-market-info editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
-      <h5>Minneapolis Farmers Market</h5>
+      <h1>Minneapolis Farmers Market</h1>
       <p>----------------------------</p>
-      <p><strong>Open Memorial Day</strong>&nbsp;</p>
-      <p>6 am to 1 pm</p>
-      <p>----------------------------</p>
-      <p><strong>Summer Season Hours&nbsp;</strong></p>
+      <h1><strong>Summer Season Hours&nbsp;</strong></h1>
       <p>May 1 - October 31</p>
       <p>------------------------------</p>
       <p><strong>Wednesday-Friday&nbsp;</strong></p>
       <p>7 a.m. - 1 p.m.</p>
       <p><strong>Saturday-Sunday</strong></p>
       <p>6 a.m. - 1 p.m.</p>
+      <h2><strong>Winter Market Hours</strong></h2>
+      <p>November 3 - April 26</p>
+      <p><strong>Saturdays</strong></p>
+      <p>9 a.m. - 12 p.m.<span style="letter-spacing: 0.39px; white-space: revert;">&nbsp;</span></p>
       <p>&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
