Updated 7 files via CloudCannon

--- a/FreshNews/about-us.html
+++ b/FreshNews/about-us.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="en-US"><head><meta charset="utf-8">
   <title>Redirecting…</title>
-  <link href="https://www.mplsfarmersmarket.com/about.html" rel="canonical">
-  <script>location="https://www.mplsfarmersmarket.com/about.html"</script>
-  <meta content="0; url=https://www.mplsfarmersmarket.com/about.html" http-equiv="refresh">
+  <link href="https://www.mplsfarmersmarket.com/our-team.html" rel="canonical">
+  <script>location="https://www.mplsfarmersmarket.com/our-team.html"</script>
+  <meta content="0; url=https://www.mplsfarmersmarket.com/our-team.html" http-equiv="refresh">
   <meta content="noindex" name="robots">
   </head><body><h1>Redirecting…</h1>
-  <a href="https://www.mplsfarmersmarket.com/about.html">Click here if you are not redirected.</a>
+  <a href="https://www.mplsfarmersmarket.com/our-team.html">Click here if you are not redirected.</a>
 
 </body></html>
