Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -188,18 +188,20 @@
     <div class="col-12 col-lg-12 home-market-info editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h1>Minneapolis Farmers Market</h1>
       <p>----------------------------</p>
-      <h1><strong>Summer Season Hours&nbsp;</strong></h1>
-      <p>May 1 - October 31</p>
-      <p>------------------------------</p>
-      <p><strong>Wednesday-Friday&nbsp;</strong></p>
-      <p>7 a.m. - 1 p.m.</p>
-      <p><strong>Saturday-Sunday</strong></p>
-      <p>6 a.m. - 1 p.m.</p>
       <h2><strong>Winter Market Hours</strong></h2>
       <p>November 3 - April 26</p>
       <p><strong>Saturdays</strong></p>
       <p>9 a.m. - 12 p.m.<span style="letter-spacing: 0.39px; white-space: revert;">&nbsp;</span></p>
-      <p>&nbsp;</p>
+      <h2><strong>Tree Hours</strong></h2>
+      <p></p>
+      <h5><strong>Swan Tree Farms</strong>&nbsp;</h5>
+      <p>Sunday - Thursday&nbsp;</p>
+      <p>9 a.m. - 9 p.m.&nbsp;</p>
+      <p><strong>Friday - Sunday&nbsp;</strong></p>
+      <p>9 a.m. - 9 p.m.&nbsp;</p>
+      <h5><strong>Wry's Tree Farm</strong></h5>
+      <p>Daily</p>
+      <p>7 a.m. - 9 p.m.&nbsp;&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a href="https://fleet-kouprey.cloudvent.net/lyndale-market">Learn More</a></p>
